--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,92 +1,79 @@
-/* Wrapper Class */
-
+/* Container */
+.container {
+  width: 100%;
+}
 
 /* Menu Items */
 
 .menu {
-    display: block;
-    height: 80vh;
-    width: 7%;
-    margin: 2%;
-    border-radius: 0.5rem;
-    z-index: 1;
-    position: fixed;
-    top: 8%;
-    left: 0;
-    bottom: 5%;
-    background-color: #7B40F2;
-    overflow-x: hidden;
+  /* align-items: center; */
+  height: 75vh;
+  width: 100px;
+  margin: 10px;
+  border-radius: 0.5rem;
+  background-color: #7b40f2;
+  /* overflow: hidden; */
 }
 
 .menu a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 15px 0;
-    text-decoration: none;
-    transition: background 0.3s;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 0;
+  text-decoration: none;
 }
 
 .menu_items {
-    font-size: 2.2rem;
-    color: rgb(75, 63, 155);
+  font-size: 2.2rem;
+  color: rgb(75, 63, 155);
 }
 
 .active {
-    color: white;
+  color: white;
 }
 
 .menu_items:hover {
-    color: white;
+  color: white;
 }
-
 
 /* Navbar header */
 
 .Navbar {
-    margin: 2%;
-    position: fixed;
-    left: 10%;
-    width: 100%;
+  margin: 2%;
 }
 
 .searchWrapper {
-    width: 100%;
-    max-width: 31.25rem;
+  width: 100%;
+  max-width: 31.25rem;
 }
 
 .searchBar {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 #searchQueryInput {
-    width: 100%;
-    height: 2.8rem;
-    background: #f5f5f5;
-    outline: none;
-    border: none;
-    border-radius: 1.625rem;
-    padding: 0 3.5rem 0 1.5rem;
-    font-size: 1rem;
+  width: 100%;
+  height: 2.8rem;
+  background: #f5f5f5;
+  outline: none;
+  border: none;
+  border-radius: 1.625rem;
+  padding: 0 3.5rem 0 1.5rem;
+  font-size: 1rem;
 }
 
 #searchQuerySubmit {
-    width: 3.5rem;
-    height: 2.8rem;
-    margin-left: -3.5rem;
-    background: none;
-    border: none;
-    outline: none;
+  width: 3.5rem;
+  height: 2.8rem;
+  margin-left: -3.5rem;
+  background: none;
+  border: none;
+  outline: none;
 }
 
 #searchQuerySubmit:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
-
-
-/* Container */
-
-.container {}
