--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,79 +1,238 @@
-/* Container */
-.container {
-  width: 100%;
+/* Body */
+
+body {
+    background: rgb(242, 242, 242);
 }
+
+
+/* Container */
+
+.container {
+    width: 100%;
+}
+
+
+/* FONTS */
+
+.greetings span {
+    font-style: italic;
+    padding: 5px;
+}
+
+
+/* Mobile Menu */
+
+.mobile-menu {
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: fixed;
+    z-index: 9999;
+    bottom: 0;
+    left: 0;
+    width: 100vw;
+    height: auto;
+    background-color: #7b40f2;
+}
+
 
 /* Menu Items */
 
 .menu {
-  /* align-items: center; */
-  height: 75vh;
-  width: 100px;
-  margin: 10px;
-  border-radius: 0.5rem;
-  background-color: #7b40f2;
-  /* overflow: hidden; */
+    /* align-items: center; */
+    display: block;
+    height: 75vh;
+    width: 60%;
+    margin-left: 10px;
+    border-radius: 0.5rem;
+    background-color: #7b40f2;
+    /* overflow: hidden; */
 }
 
 .menu a {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 15px 0;
-  text-decoration: none;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 15px 0;
+    text-decoration: none;
 }
 
 .menu_items {
-  font-size: 2.2rem;
-  color: rgb(75, 63, 155);
+    font-size: 2.2rem;
+    color: rgb(75, 63, 155);
 }
 
 .active {
-  color: white;
+    color: white;
 }
 
 .menu_items:hover {
-  color: white;
+    color: white;
 }
+
 
 /* Navbar header */
 
 .Navbar {
-  margin: 2%;
+    width: 100%;
+    margin: 3% 0 2% 0;
 }
 
 .searchWrapper {
-  width: 100%;
-  max-width: 31.25rem;
+    width: 100%;
+    max-width: 31.25rem;
 }
 
 .searchBar {
-  width: 100%;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 #searchQueryInput {
-  width: 100%;
-  height: 2.8rem;
-  background: #f5f5f5;
-  outline: none;
-  border: none;
-  border-radius: 1.625rem;
-  padding: 0 3.5rem 0 1.5rem;
-  font-size: 1rem;
+    box-shadow: 5px 5px 5px #ccc;
+    width: 100%;
+    height: 2.8rem;
+    background: #f5f5f5;
+    outline: none;
+    border: none;
+    border-radius: 1.625rem;
+    padding: 0 3.5rem 0 1.5rem;
+    font-size: 1rem;
 }
 
 #searchQuerySubmit {
-  width: 3.5rem;
-  height: 2.8rem;
-  margin-left: -3.5rem;
-  background: none;
-  border: none;
-  outline: none;
+    width: 3.5rem;
+    height: 2.8rem;
+    margin-left: -3.5rem;
+    background: none;
+    border: none;
+    outline: none;
 }
 
 #searchQuerySubmit:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
+
+.weather {
+    vertical-align: middle;
+    font-size: 1.5rem;
+    padding: 5px;
+}
+
+
+/* Card */
+
+.note {
+    background: #fff;
+    border-radius: 1.2rem;
+    box-shadow: 5px 5px 5px #ccc;
+    padding: 5px;
+    width: 180px;
+    margin: 10px;
+    text-align: center;
+    font-family: 'Roboto', sans-serif;
+}
+
+.note img {
+    margin-left: auto;
+    margin-right: auto;
+    width: 50px;
+}
+
+.note p {
+    font-size: 1.1em;
+    font-weight: bold;
+    margin-top: 0.2rem;
+    white-space: pre-wrap;
+    word-wrap: break-word;
+}
+
+.active-note {
+    background-color: #7b40f2;
+    color: white;
+}
+
+#status {
+    display: inline-block;
+    padding-right: 3.8rem;
+}
+
+.react-icons {
+    padding-top: 0px;
+    display: block;
+    font-size: 50px;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+
+/* Devices */
+
+.devices::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    background-color: #7b40f2;
+}
+
+.devices::-webkit-scrollbar {
+    height: 10px;
+}
+
+
+/* My Devices */
+
+.myDevices {
+    display: flex;
+    flex-wrap: wrap;
+    white-space: pre;
+}
+
+.myDevices * {
+    align-self: center;
+    flex: 30%;
+}
+
+
+/* MyDevices Dropdown */
+
+.dropdown {
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+    flex: 1;
+    text-align: end;
+    margin-left: 30%;
+}
+
+.dropdown div {
+    margin: 10px;
+}
+
+.dropdown svg {
+    vertical-align: middle;
+    padding-left: 5px;
+    margin-top: 3px;
+}
+
+.dropdown-list {
+    display: inline-flex;
+    justify-content: space-evenly;
+    align-items: center;
+    padding: 5% 10% 5% 10%;
+}
+
+
+/* view more-icon */
+
+.view-more svg {
+    position: relative;
+    display: inline-block;
+    font-size: 25px;
+    vertical-align: middle;
+}
+
+
+/*  */
