--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,31 @@
-/* Body */
-
+html,
 body {
     background: rgb(242, 242, 242);
+    height: 100%;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
 }
 
+#root {
+    height: 95%;
+    overflow-x: hidden;
+}
 
-/* Container */
+#root::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: inherit;
+}
 
-.container {
-    width: 100%;
+#root::-webkit-scrollbar {
+    width: 10px;
+    background-color: inherit;
+}
+
+#root::-webkit-scrollbar-thumb {
+    background-color: #7b40f2;
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
 }
 
 
@@ -27,7 +44,6 @@ body {
     align-items: center;
     justify-content: space-around;
     position: fixed;
-    z-index: 9999;
     bottom: 0;
     left: 0;
     width: 100vw;
@@ -62,12 +78,12 @@ body {
     color: rgb(75, 63, 155);
 }
 
-.active {
+.menu_items:hover {
     color: white;
 }
 
-.menu_items:hover {
-    color: white;
+.active {
+    color: white
 }
 
 
@@ -75,7 +91,7 @@ body {
 
 .Navbar {
     width: 100%;
-    margin: 3% 0 2% 0;
+    margin: 3% 0 0 0;
 }
 
 .searchWrapper {
@@ -127,18 +143,11 @@ body {
 .note {
     background: #fff;
     border-radius: 1.2rem;
-    box-shadow: 5px 5px 5px #ccc;
-    padding: 5px;
-    width: 180px;
-    margin: 10px;
+    box-shadow: 0 0 5px 5px #ccc;
+    padding: 10px;
+    margin: 1%;
     text-align: center;
     font-family: 'Roboto', sans-serif;
-}
-
-.note img {
-    margin-left: auto;
-    margin-right: auto;
-    width: 50px;
 }
 
 .note p {
@@ -146,16 +155,13 @@ body {
     font-weight: bold;
     margin-top: 0.2rem;
     white-space: pre-wrap;
+    height: min-content;
     word-wrap: break-word;
-}
-
-.active-note {
-    background-color: #7b40f2;
-    color: white;
 }
 
 #status {
     display: inline-block;
+    width: 35px;
     padding-right: 3.8rem;
 }
 
@@ -170,69 +176,96 @@ body {
 
 /* Devices */
 
-.devices::-webkit-scrollbar-thumb {
-    border-radius: 10px;
-    box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-    -webkit-box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
-    background-color: #7b40f2;
+.devices::-webkit-scrollbar-track {
+    /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    /* -webkit-box-shadow: inset 0 0 6px rgba(242, 242, 242, 0.3); */
+    background-color: inherit;
 }
 
 .devices::-webkit-scrollbar {
     height: 10px;
 }
 
+.devices::-webkit-scrollbar-thumb {
+    background-color: #F90;
+    border-radius: 1rem;
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
+}
+
 
 /* My Devices */
 
+.myDevicesHeader {
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+    align-self: flex-start;
+}
+
 .myDevices {
     display: flex;
-    flex-wrap: wrap;
+    width: 100%;
+    overflow-x: scroll;
     white-space: pre;
 }
 
 .myDevices * {
     align-self: center;
-    flex: 30%;
+}
+
+.myDevices::-webkit-scrollbar-track {
+    /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+    /* -webkit-box-shadow: inset 0 0 6px rgba(242, 242, 242, 0.3); */
+    background-color: inherit;
+}
+
+.myDevices::-webkit-scrollbar {
+    height: 8px;
+    background-color: inherit;
+}
+
+.myDevices::-webkit-scrollbar-thumb {
+    background-color: #F90;
+    border-radius: 1rem;
+    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
 }
 
 
-/* MyDevices Dropdown */
+/* Role Button  */
 
-.dropdown {
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    flex: 1;
-    text-align: end;
-    margin-left: 30%;
+input[type="radio"][name="buttonGroup"] {
+    display: none;
 }
 
-.dropdown div {
-    margin: 10px;
-}
-
-.dropdown svg {
-    vertical-align: middle;
-    padding-left: 5px;
-    margin-top: 3px;
-}
-
-.dropdown-list {
+input[type="radio"]+label {
     display: inline-flex;
-    justify-content: space-evenly;
+    flex-direction: column;
     align-items: center;
-    padding: 5% 10% 5% 10%;
+    justify-content: space-evenly;
+    border: 1px solid #ccc;
+    border-radius: 1em;
+    background-color: #F0F0F0;
+    width: 10em;
+    min-height: 100px;
+    text-align: center;
+}
+
+input[type="radio"]:hover+label {
+    cursor: pointer;
+    box-shadow: 0 0 5px 5px #b7b7b7;
+    /* background-color: #ccc; */
+    transition: box-shadow linear 0.2s;
+}
+
+input[type='radio'][name="buttonGroup"]:checked+label {
+    background-color: #7b40f2;
+    color: white;
 }
 
 
-/* view more-icon */
+/* Dropdown */
 
-.view-more svg {
-    position: relative;
-    display: inline-block;
-    font-size: 25px;
-    vertical-align: middle;
+#dropdown-text {
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    padding-right: 15px;
 }
-
-
-/*  */
