--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,271 +1,368 @@
 html,
 body {
-    background: rgb(242, 242, 242);
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+  background: #fff;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+  overflow: hidden;
 }
 
 #root {
-    height: 95%;
-    overflow-x: hidden;
+  height: 100%;
+  overflow-x: hidden;
 }
 
 #root::-webkit-scrollbar-track {
-    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
-    background-color: inherit;
+  box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+  background-color: inherit;
 }
 
 #root::-webkit-scrollbar {
-    width: 10px;
-    background-color: inherit;
+  width: 10px;
+  background-color: inherit;
 }
 
 #root::-webkit-scrollbar-thumb {
-    background-color: #7b40f2;
-    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
+  background-color: #7b40f2;
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 75%,
+    transparent 75%,
+    transparent
+  );
 }
-
 
 /* FONTS */
-
-.greetings span {
-    font-style: italic;
-    padding: 5px;
+.greetings {
+  background: url("./assets/weather-assests/sunny.jpg") no-repeat;
+  background-attachment: inherit;
+  background-position: center center;
+  background-size: cover;
 }
 
+.greetings span {
+  padding: 5px;
+}
 
 /* Mobile Menu */
 
 .mobile-menu {
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100vw;
-    height: auto;
-    background-color: #7b40f2;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100vw;
+  height: auto;
+  background-color: #7b40f2;
 }
-
 
 /* Menu Items */
 
 .menu {
-    /* align-items: center; */
-    display: block;
-    height: 75vh;
-    width: 60%;
-    margin-left: 10px;
-    border-radius: 0.5rem;
-    background-color: #7b40f2;
-    /* overflow: hidden; */
+  /* align-items: center; */
+  display: block;
+  height: 75vh;
+  width: 60%;
+  margin-left: 10px;
+  border-radius: 0.5rem;
+  background-color: #7b40f2;
+  /* overflow: hidden; */
 }
 
 .menu a {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    padding: 15px 0;
-    text-decoration: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 15px 0;
+  text-decoration: none;
 }
 
 .menu_items {
-    font-size: 2.2rem;
-    color: rgb(75, 63, 155);
+  font-size: 2.2rem;
+  color: rgb(75, 63, 155);
 }
 
 .menu_items:hover {
-    color: white;
+  color: white;
 }
 
-.active {
-    color: white
+.activeLink svg {
+  color: white;
 }
-
 
 /* Navbar header */
 
 .Navbar {
-    width: 100%;
-    margin: 3% 0 0 0;
+  width: 100%;
+  margin: 3% 0 0 0;
 }
 
 .searchWrapper {
-    width: 100%;
-    max-width: 31.25rem;
+  width: 100%;
+  max-width: 31.25rem;
 }
 
 .searchBar {
-    width: 100%;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
 }
 
 #searchQueryInput {
-    box-shadow: 5px 5px 5px #ccc;
-    width: 100%;
-    height: 2.8rem;
-    background: #f5f5f5;
-    outline: none;
-    border: none;
-    border-radius: 1.625rem;
-    padding: 0 3.5rem 0 1.5rem;
-    font-size: 1rem;
+  box-shadow: 0px 0px 5px 2px #ccc;
+  width: 100%;
+  height: 2.8rem;
+  background: #fff;
+  outline: none;
+  border: none;
+  border-radius: 1.625rem;
+  padding: 0 3.5rem 0 1.5rem;
+  font-size: 1rem;
 }
 
 #searchQuerySubmit {
-    width: 3.5rem;
-    height: 2.8rem;
-    margin-left: -3.5rem;
-    background: none;
-    border: none;
-    outline: none;
+  width: 3.5rem;
+  height: 2.8rem;
+  margin-left: -3.5rem;
+  background: none;
+  border: none;
+  outline: none;
 }
 
 #searchQuerySubmit:hover {
-    cursor: pointer;
+  cursor: pointer;
 }
 
 .weather {
-    vertical-align: middle;
-    font-size: 1.5rem;
-    padding: 5px;
+  vertical-align: middle;
+  font-size: 1.5rem;
+  padding: 5px;
 }
-
 
 /* Card */
 
 .note {
-    background: #fff;
-    border-radius: 1.2rem;
-    box-shadow: 0 0 5px 5px #ccc;
-    padding: 10px;
-    margin: 1%;
-    text-align: center;
-    font-family: 'Roboto', sans-serif;
+  border-radius: 1.2rem;
+  width: 50%;
+  color: white;
+  padding: 10px;
+  margin: 1%;
+  text-align: center;
+  font-family: "Roboto", sans-serif;
 }
 
 .note p {
-    font-size: 1.1em;
-    font-weight: bold;
-    margin-top: 0.2rem;
-    white-space: pre-wrap;
-    height: min-content;
-    word-wrap: break-word;
+  font-size: 1.1em;
+  font-weight: bold;
+  margin-top: 0.2rem;
+  white-space: pre-wrap;
+  height: min-content;
+  word-wrap: break-word;
 }
 
 #status {
-    display: inline-block;
-    width: 35px;
-    padding-right: 3.8rem;
+  display: inline-block;
+  width: 40px;
+  margin-right: 20%;
 }
 
 .react-icons {
-    padding-top: 0px;
-    display: block;
-    font-size: 50px;
-    margin-left: auto;
-    margin-right: auto;
+  padding-top: 0px;
+  display: block;
+  font-size: 50px;
+  margin-left: auto;
+  margin-right: auto;
 }
-
 
 /* Devices */
 
 .devices::-webkit-scrollbar-track {
-    /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-    /* -webkit-box-shadow: inset 0 0 6px rgba(242, 242, 242, 0.3); */
-    background-color: inherit;
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  /* -webkit-box-shadow: inset 0 0 6px rgba(242, 242, 242, 0.3); */
+  background-color: inherit;
 }
 
 .devices::-webkit-scrollbar {
-    height: 10px;
+  height: 10px;
 }
 
 .devices::-webkit-scrollbar-thumb {
-    background-color: #F90;
-    border-radius: 1rem;
-    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
+  background-color: #f90;
+  border-radius: 1rem;
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 75%,
+    transparent 75%,
+    transparent
+  );
 }
-
 
 /* My Devices */
 
 .myDevicesHeader {
-    display: flex;
-    width: 100%;
-    justify-content: space-between;
-    align-self: flex-start;
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  align-self: flex-start;
 }
 
 .myDevices {
-    display: flex;
-    width: 100%;
-    overflow-x: scroll;
-    white-space: pre;
+  display: flex;
+  width: 100%;
+  overflow-x: scroll;
+  white-space: pre;
 }
 
 .myDevices * {
-    align-self: center;
+  align-self: center;
 }
 
 .myDevices::-webkit-scrollbar-track {
-    /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
-    /* -webkit-box-shadow: inset 0 0 6px rgba(242, 242, 242, 0.3); */
-    background-color: inherit;
+  /* box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3); */
+  /* -webkit-box-shadow: inset 0 0 6px rgba(242, 242, 242, 0.3); */
+  background-color: inherit;
 }
 
 .myDevices::-webkit-scrollbar {
-    height: 8px;
-    background-color: inherit;
+  height: 8px;
+  background-color: inherit;
 }
 
 .myDevices::-webkit-scrollbar-thumb {
-    background-color: #F90;
-    border-radius: 1rem;
-    background-image: -webkit-linear-gradient(45deg, rgba(255, 255, 255, .2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, .2) 50%, rgba(255, 255, 255, .2) 75%, transparent 75%, transparent)
+  background-color: #f90;
+  border-radius: 1rem;
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 75%,
+    transparent 75%,
+    transparent
+  );
 }
-
 
 /* Role Button  */
 
 input[type="radio"][name="buttonGroup"] {
-    display: none;
+  display: none;
 }
 
-input[type="radio"]+label {
-    display: inline-flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: space-evenly;
-    border: 1px solid #ccc;
-    border-radius: 1em;
-    background-color: #F0F0F0;
-    width: 10em;
-    min-height: 100px;
-    text-align: center;
+input[type="radio"] + label {
+  display: inline-flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-evenly;
+  border: 1px solid #ccc;
+  border-radius: 1em;
+  background-color: transparent;
+  width: 10em;
+  min-height: 100px;
+  text-align: center;
 }
 
-input[type="radio"]:hover+label {
-    cursor: pointer;
-    box-shadow: 0 0 5px 5px #b7b7b7;
-    /* background-color: #ccc; */
-    transition: box-shadow linear 0.2s;
+input[type="radio"]:hover + label {
+  cursor: pointer;
+  box-shadow: 0 0 5px 5px #ccc;
+  /* background-color: #ccc; */
+  transition: box-shadow linear 0.2s;
 }
 
-input[type='radio'][name="buttonGroup"]:checked+label {
-    background-color: #7b40f2;
-    color: white;
+input[type="radio"][name="buttonGroup"]:checked + label {
+  background-color: #7b40f2;
+  color: white;
 }
-
 
 /* Dropdown */
 
 #dropdown-text {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    padding-right: 15px;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  padding-right: 15px;
+}
+
+#chart {
+  width: 100%;
+}
+
+#status-indicator {
+  position: relative;
+  display: flex;
+  height: 350px;
+  width: 100%;
+  align-items: center;
+  justify-content: space-around;
+}
+
+#circle {
+  position: absolute;
+  box-sizing: border-box;
+  height: 200px;
+  width: 200px;
+  top: 21%;
+  /* box-shadow: 0px 0px 5px 5px #fff; */
+  box-shadow: 0px 0px 5px 5px #ccc;
+  border: 1px solid#ccc;
+  border-radius: 50%;
+  background-color: #fff;
+}
+
+#small-circle {
+  position: absolute;
+  top: 12%;
+  left: 12%;
+  box-shadow: inset 0px 0px 5px 5px #ccc;
+  height: 150px;
+  width: 150px;
+  background-color: #fff;
+  border-radius: 50%;
+}
+
+#Slider {
+  position: absolute;
+}
+
+#Slider-icon {
+  position: absolute;
+  height: 50px;
+  width: 50px;
+}
+
+#Slider-icon path {
+  transform-origin: center;
+  transform: rotate(180deg);
+  fill: #7b40f2;
+}
+
+#Slider-icon circle {
+  cx: 260px;
+  cy: 270px;
+}
+
+.selectDisable {
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -o-user-select: none;
+  user-select: none;
+}
+
+.selectEnable {
+  -webkit-user-select: text;
+  -khtml-user-select: text;
+  -moz-user-select: text;
+  -o-user-select: text;
+  user-select: text;
 }
