--- a/client/src/components/dropdown.css
+++ b/client/src/components/dropdown.css
@@ -1,84 +1,104 @@
 .dropdown {
-  position: relative;
-  width: 160px;
-  border: 1px solid inherit;
-  background: #7b40f2;
-  border-radius: 1.25rem;
-  animation: border-radius 0.3s ease-in-out;
-  cursor: pointer;
+    position: relative;
+    width: 160px;
+    border: 1px solid inherit;
+    background: #7b40f2;
+    border-radius: 1.25rem;
+    animation: border-radius 0.3s ease-in-out;
+    cursor: pointer;
 }
 
 .dropdown.active {
-  border-radius: 1.25rem 1.2rem 0 0;
+    border-radius: 1.25rem 1.2rem 0 0;
 }
 
 .dropdown__text {
-  color: white;
-  padding: 10px 16px;
-  height: auto;
-  pointer-events: none;
+    color: white;
+    padding: 10px 16px;
+    height: auto;
+    pointer-events: none;
 }
 
 .dropdown__text:hover {
-  color: white;
-  background: #6744ae;
-  border-radius: inherit;
+    color: white;
+    background: #6744ae;
+    border-radius: inherit;
 }
 
 .dropdown__text:after {
-  content: "";
-  transition: all 0.3s;
-  border: solid #ccc;
-  border-width: 0 1px 1px 0;
-  float: right;
-  margin-top: 8px;
-  margin-right: 6px;
-  padding: 5px;
-  transform: rotate(-135deg);
-  -webkit-transform: rotate(-135deg);
+    content: "";
+    transition: all 0.3s;
+    border: solid #ccc;
+    border-width: 0 1px 1px 0;
+    float: right;
+    margin-top: 8px;
+    margin-right: 6px;
+    padding: 5px;
+    transform: rotate(-135deg);
+    -webkit-transform: rotate(-135deg);
 }
 
 .dropdown.active .dropdown__text:after {
-  margin-top: 1px;
-  transform: rotate(45deg);
-  -webkit-transform: rotate(45deg);
+    margin-top: 1px;
+    transform: rotate(45deg);
+    -webkit-transform: rotate(45deg);
 }
 
 .dropdown__items {
-  position: absolute;
-  width: inherit;
-  z-index: 1;
-  visibility: hidden;
-  opacity: 0;
-  max-height: 0px;
-  transition: max-height 0.6s, cubic-bezier(0.3, 0, 1, 1.38);
+    position: absolute;
+    width: inherit;
+    z-index: 1;
+    visibility: hidden;
+    opacity: 0;
+    max-height: 0px;
 }
 
 .dropdown.active .dropdown__items {
-  color: white;
-  background: inherit;
-  border-radius: 0 0 1.25rem 1.25rem;
-  visibility: visible;
-  border-top: 0.1px solid rgba(0, 0, 0, 0.3);
-  height: auto;
-  max-height: 290px;
-  opacity: 1;
-  transition: max-height 0.3s, visibility 4s cubic-bezier(0.3, 0, 1, 1.38);
+    color: white;
+    background: inherit;
+    border-radius: 0 0 1.25rem 1.25rem;
+    visibility: visible;
+    border-top: 0.1px solid rgba(0, 0, 0, 0.3);
+    height: auto;
+    max-height: 200px;
+    opacity: 1;
+    transition: max-height 0.6s ease-in-out;
+    overflow-y: scroll;
 }
 
 .dropdown__item {
-  cursor: pointer;
-  padding: 10px 18px;
+    transition: color 1s;
+    cursor: pointer;
+    padding: 10px 18px;
 }
 
 .dropdown__item:not(:last-child) {
-  border-bottom: 0.25px solid rgba(0, 0, 0, 0.3);
+    border-bottom: 0.25px solid rgba(0, 0, 0, 0.3);
 }
 
 .dropdown__item:hover {
-  color: white;
-  background: #6744ae;
+    color: white;
+    background: #6744ae;
 }
+
 .dropdown__item:last-child:hover {
-  border-radius: inherit;
+    border-radius: inherit;
 }
+
+
+/* .dropdown__items::-webkit-scrollbar-track {
+    box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: inherit;
+} */
+
+.dropdown__items::-webkit-scrollbar {
+    width: 0px;
+    /* background-color: inherit; */
+}
+
+
+/* .dropdown__items::-webkit-scrollbar-thumb {
+    background-color: orange;
+    background-image: -webkit-linear-gradient( 45deg, rgba(255, 255, 255, 0.2) 25%, transparent 25%, transparent 50%, rgba(255, 255, 255, 0.2) 50%, rgba(255, 255, 255, 0.2) 75%, transparent 75%, transparent);
+} */
