--- a/client/src/App.css
+++ b/client/src/App.css
@@ -85,6 +85,10 @@ body {
   text-decoration: none;
 }
 
+.menu > a > * {
+  pointer-events: none;
+}
+
 .menu_items {
   font-size: 2.2rem;
   color: rgb(75, 63, 155);
@@ -310,7 +314,7 @@ input[type="radio"][name="buttonGroup"]:checked + label {
 #status-indicator[disabled] {
   cursor: not-allowed;
   pointer-events: none;
-  opacity: 0.7;
+  opacity: 0.2;
 }
 
 #circle {
