--- a/client/src/components/dropdown.css
+++ b/client/src/components/dropdown.css
@@ -1,90 +1,89 @@
 .dropdown {
-    position: relative;
-    width: 160px;
-    border: 1px solid inherit;
-    background: #7b40f2;
-    border-radius: 1.25rem;
-    animation: border-radius 0.3s ease-in-out;
-    cursor: pointer;
+  position: relative;
+  width: 160px;
+  border: 1px solid inherit;
+  background: #7b40f2;
+  border-radius: 1.25rem;
+  animation: border-radius 0.2s ease;
+  cursor: pointer;
 }
 
 .dropdown.active {
-    border-radius: 1.25rem 1.2rem 0 0;
+  border-radius: 1.25rem 1.2rem 0 0;
 }
 
 .dropdown__text {
-    color: white;
-    padding: 10px 16px;
-    height: auto;
-    pointer-events: none;
+  color: white;
+  padding: 10px 16px;
+  height: auto;
+  pointer-events: none;
 }
 
 .dropdown__text:hover {
-    color: white;
-    background: #6744ae;
-    border-radius: inherit;
+  color: white;
+  background: #6744ae;
+  border-radius: inherit;
 }
 
 .dropdown__text:after {
-    content: "";
-    transition: all 0.3s;
-    border: solid #ccc;
-    border-width: 0 1px 1px 0;
-    float: right;
-    margin-top: 8px;
-    margin-right: 6px;
-    padding: 5px;
-    transform: rotate(-135deg);
-    -webkit-transform: rotate(-135deg);
+  content: "";
+  transition: all 0.3s;
+  border: solid #ccc;
+  border-width: 0 1px 1px 0;
+  float: right;
+  margin-top: 8px;
+  margin-right: 6px;
+  padding: 5px;
+  transform: rotate(-135deg);
+  -webkit-transform: rotate(-135deg);
 }
 
 .dropdown.active .dropdown__text:after {
-    margin-top: 1px;
-    transform: rotate(45deg);
-    -webkit-transform: rotate(45deg);
+  margin-top: 1px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
 
 .dropdown__items {
-    position: absolute;
-    width: inherit;
-    z-index: 1;
-    visibility: hidden;
-    opacity: 0;
-    max-height: 0px;
+  position: absolute;
+  width: inherit;
+  z-index: 1;
+  visibility: hidden;
+  opacity: 0;
+  max-height: 0px;
+  overflow-y: scroll;
 }
 
 .dropdown.active .dropdown__items {
-    color: white;
-    background: inherit;
-    border-radius: 0 0 1.25rem 1.25rem;
-    visibility: visible;
-    border-top: 0.1px solid rgba(0, 0, 0, 0.3);
-    height: auto;
-    max-height: 120px;
-    opacity: 1;
-    transition: max-height 0.6s ease-in-out;
-    overflow-y: scroll;
+  color: white;
+  background: inherit;
+  border-radius: 0 0 1.25rem 1.25rem;
+  visibility: visible;
+  border-top: 0.1px solid rgba(0, 0, 0, 0.3);
+  height: auto;
+  max-height: 120px;
+  opacity: 1;
+  transition: max-height 0.3s ease;
 }
 
 .dropdown__item {
-    transition: color 1s;
-    cursor: pointer;
-    padding: 10px 18px;
+  transition: color 0.5s;
+  cursor: pointer;
+  padding: 10px 18px;
 }
 
 .dropdown__item:not(:last-child) {
-    border-bottom: 0.25px solid rgba(0, 0, 0, 0.3);
+  border-bottom: 0.25px solid rgba(0, 0, 0, 0.3);
 }
 
 .dropdown__item:hover {
-    color: white;
-    background: #6744ae;
+  color: white;
+  background: #6744ae;
 }
 
 .dropdown__item:last-child:hover {
-    border-radius: inherit;
+  border-radius: inherit;
 }
-
 
 /* .dropdown__items::-webkit-scrollbar-track {
     box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
@@ -93,10 +92,9 @@
 } */
 
 .dropdown__items::-webkit-scrollbar {
-    width: 0px;
-    /* background-color: inherit; */
+  width: 0px;
+  /* background-color: inherit; */
 }
-
 
 /* .dropdown__items::-webkit-scrollbar-thumb {
     background-color: orange;
