--- a/client/src/App.css
+++ b/client/src/App.css
@@ -8,18 +8,18 @@ body {
 }
 
 #root {
-  height: 100%;
+  height: 95%;
   overflow-x: hidden;
 }
 
-#root::-webkit-scrollbar-track {
+/* #root::-webkit-scrollbar-track {
   box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
   background-color: inherit;
-}
+} */
 
 #root::-webkit-scrollbar {
-  width: 1rem;
+  width: 12px;
   background-color: inherit;
 }
 
@@ -35,6 +35,7 @@ body {
     transparent 75%,
     transparent
   );
+  border-radius: 1rem;
 }
 
 /* FONTS */
@@ -155,9 +156,10 @@ body {
 /* Card */
 
 .note {
+  display: inline-block;
   border-radius: 1.2rem;
-  width: 50%;
   color: white;
+  width: 200px;
   padding: 10px;
   margin: 1%;
   text-align: center;
@@ -224,10 +226,12 @@ body {
 }
 
 .myDevices {
-  display: flex;
+  vertical-align: middle;
+  display: inline-block;
+  height: 100%;
   width: 100%;
   overflow-x: scroll;
-  white-space: pre;
+  white-space: nowrap;
 }
 
 .myDevices * {
