--- a/client/src/App.css
+++ b/client/src/App.css
@@ -107,12 +107,13 @@ body {
 
 .Navbar {
   width: 100%;
-  margin: 3% 0 0 0;
+  margin: 2% 0;
 }
 
 .searchWrapper {
   width: 100%;
   max-width: 31.25rem;
+  margin: 0 11rem;
 }
 
 .searchBar {
@@ -125,13 +126,13 @@ body {
 #searchQueryInput {
   box-shadow: 0px 0px 5px 2px #ccc;
   width: 100%;
-  height: 2.8rem;
+  height: 3rem;
   background: #fff;
   outline: none;
   border: none;
   border-radius: 1.625rem;
   padding: 0 3.5rem 0 1.5rem;
-  font-size: 1rem;
+  font-size: 1.2rem;
 }
 
 #searchQuerySubmit {
@@ -306,9 +307,10 @@ input[type="radio"][name="buttonGroup"]:checked + label {
 }
 
 #status-indicator {
+  margin: 8px;
   position: relative;
   display: flex;
-  height: 350px;
+  height: 21.875rem;
   width: 100%;
   align-items: center;
   justify-content: space-around;
