--- a/client/src/loading.css
+++ b/client/src/loading.css
@@ -8,7 +8,7 @@
 .la-ball-pulse {
   display: block;
   font-size: 0;
-  color: #fff;
+  color: #7b40f2;
 }
 .la-ball-pulse.la-dark {
   color: #333;
@@ -24,22 +24,22 @@
   height: 18px;
 }
 .la-ball-pulse > div:nth-child(1) {
-  -webkit-animation-delay: -200ms;
-  -moz-animation-delay: -200ms;
-  -o-animation-delay: -200ms;
-  animation-delay: -200ms;
-}
-.la-ball-pulse > div:nth-child(2) {
-  -webkit-animation-delay: -100ms;
-  -moz-animation-delay: -100ms;
-  -o-animation-delay: -100ms;
-  animation-delay: -100ms;
-}
-.la-ball-pulse > div:nth-child(3) {
   -webkit-animation-delay: 0ms;
   -moz-animation-delay: 0ms;
   -o-animation-delay: 0ms;
   animation-delay: 0ms;
+}
+.la-ball-pulse > div:nth-child(2) {
+  -webkit-animation-delay: 100ms;
+  -moz-animation-delay: 100ms;
+  -o-animation-delay: 100ms;
+  animation-delay: 100ms;
+}
+.la-ball-pulse > div:nth-child(3) {
+  -webkit-animation-delay: 200ms;
+  -moz-animation-delay: 200ms;
+  -o-animation-delay: 200ms;
+  animation-delay: 200ms;
 }
 .la-ball-pulse > div {
   width: 10px;
@@ -60,6 +60,17 @@
   height: 4px;
   margin: 2px;
 }
+.la-ball-pulse.la-1x {
+  width: 60px;
+  height: 18px;
+}
+
+.la-ball-pulse.la-1x > div {
+  width: 10px;
+  height: 10px;
+  margin: 5px;
+}
+
 .la-ball-pulse.la-2x {
   width: 108px;
   height: 36px;
@@ -87,7 +98,7 @@
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
-    transform: scale(1);
+    transform: scale(1) translateY(-20px);
   }
   30% {
     opacity: 0.1;
@@ -101,7 +112,7 @@
   100% {
     opacity: 1;
     -moz-transform: scale(1);
-    transform: scale(1);
+    transform: scale(1) translateY(-20px);
   }
   30% {
     opacity: 0.1;
@@ -115,7 +126,7 @@
   100% {
     opacity: 1;
     -o-transform: scale(1);
-    transform: scale(1);
+    transform: scale(1) translateY(-20px);
   }
   30% {
     opacity: 0.1;
@@ -131,7 +142,7 @@
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
     -o-transform: scale(1);
-    transform: scale(1);
+    transform: scale(1) translateY(-20px);
   }
   30% {
     opacity: 0.1;
