--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,10 @@ body {
   border-radius: 1rem;
 }
 
+:root {
+  --searchQueryInputHeight: 3rem;
+}
+
 body .backdrop {
   backdrop-filter: blur(1px);
 }
@@ -113,6 +117,32 @@ body .backdrop {
   margin: 2% 0;
 }
 
+.searchDropdown-Container {
+  overflow-y: scroll;
+  height: 27.5rem;
+}
+.searchDropdown-Container {
+  scrollbar-width: none;
+}
+
+.searchDropdown-Container::-webkit-scrollbar {
+  width: 0.4rem;
+}
+.searchDropdown-Container::-webkit-scrollbar-thumb {
+  background-color: #7b40f2;
+  background-image: -webkit-linear-gradient(
+    45deg,
+    rgba(255, 255, 255, 0.2) 25%,
+    transparent 25%,
+    transparent 50%,
+    rgba(255, 255, 255, 0.2) 50%,
+    rgba(255, 255, 255, 0.2) 75%,
+    transparent 75%,
+    transparent
+  );
+  border-radius: 1.25rem;
+}
+
 .searchWrapper {
   width: 100%;
   max-width: 31.25rem;
@@ -127,19 +157,17 @@ body .backdrop {
 
 .searchQueryInput {
   width: 100%;
-  height: 3rem;
+  height: var(--searchQueryInputHeight);
   background: #fff;
   outline: none;
   border: none;
+  border-radius: 1.625rem 1.625rem 0 0;
   border-bottom: 1px solid rgb(224, 227, 231);
   animation: border-radius 0.2s ease;
   padding: 0 3.5rem 0 1.5rem;
   font-size: 1.2rem;
 }
 
-.searchQueryInput.active {
-  border-radius: 1.625rem 1.625rem 0 0;
-}
 #searchQuerySubmit {
   width: 3.4rem;
   height: 2.8rem;
