--- a/client/src/App.css
+++ b/client/src/App.css
@@ -78,7 +78,7 @@ body .backdrop {
 .menu {
   /* align-items: center; */
   display: block;
-  height: 57rem;
+  height: 100vh;
   width: 4rem;
   border-radius: 0.5rem;
   background-color: #7b40f2;
