--- a/client/src/components/dropdown.css
+++ b/client/src/components/dropdown.css
@@ -1,4 +1,6 @@
 .dropdown {
+  display: inline-block;
+  justify-content: space-between;
   font-size: 1rem;
   z-index: 2;
   position: relative;
@@ -35,8 +37,7 @@
   border: solid #ccc;
   border-width: 0 1px 1px 0;
   float: right;
-  margin-top: 8px;
-  margin-right: 6px;
+  margin: 8px 6px 0px auto;
   padding: 5px;
   transform: rotate(-135deg);
   -webkit-transform: rotate(-135deg);
